--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>GMTK game</title>
-	<!--app-head-->
+	<title>Art Forgery</title>
 </head>
 
 <body>
-	<div id="root">
-		<!--app-html-->
-	</div>
+	<div id="root"></div>
 	<script src="/src/index.tsx" type="module"></script>
 </body>
 
